chore: fixes account match issue on module

--- a/module/package.json
+++ b/module/package.json
@@ -50,26 +50,37 @@
   "devDependencies": {
     "@account-abstraction/contracts": "^0.7.0",
     "@noble/curves": "^1.4.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.1",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
     "@openzeppelin/contracts": "^4.9.2",
     "@safe-global/safe-4337-local-bundler": "^0.0.0",
     "@safe-global/safe-4337-provider": "^0.0.0",
     "@simplewebauthn/server": "9.0.3",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
     "@types/yargs": "^17.0.32",
     "cbor": "^9.0.2",
+    "chai": "^4.4.1",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "ethersv5": "npm:ethers@^5",
     "hardhat": "^2.22.2",
     "hardhat-deploy": "^0.12.2",
+    "hardhat-gas-reporter": "^1.0.10",
     "husky": "^9.0.11",
     "solc": "^0.8.25",
     "solhint": "^4.5.2",
+    "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
     "typescript": "^5.4.3",
     "yargs": "^17.7.2"
   },
